tests/src/snapshots/tokenizer__tokenize_comment_same_line.snap
---
source: tests/src/tokenizer.rs
expression: "ok #comment"
---
Ok(
    (
        [
            Identifier(
                0,
                2,
            ),
        ],
        {
            0: Comment(
                4,
                11,
            ),
        },
    ),
)
