tests/src/snapshots/tokenizer__tokenize_hex_numbers.snap
---
source: tests/src/tokenizer.rs
expression: 0x101 0x0 0xfacade 0X47
---
Ok(
    (
        [
            HexDigits(
                0,
                5,
            ),
            HexDigits(
                6,
                9,
            ),
            HexDigits(
                10,
                18,
            ),
            HexDigits(
                19,
                23,
            ),
        ],
        {},
    ),
)
