tests/src/snapshots/tokenizer__tokenize_identifers.snap
---
source: tests/src/tokenizer.rs
expression: hello world
---
Ok(
    (
        [
            Identifier(
                0,
                5,
            ),
            Identifier(
                6,
                11,
            ),
        ],
        {},
    ),
)
