tests/src/snapshots/tokenizer__tokenize_import.snap
---
source: tests/src/tokenizer.rs
expression: use path/to/module
---
Ok(
    (
        [
            KeywordUse(
                0,
                3,
            ),
            ImportPath(
                4,
                18,
            ),
        ],
        {},
    ),
)
