tests/src/snapshots/tokenizer__tokenize_numbers.snap
---
source: tests/src/tokenizer.rs
expression: hello 1 47 wow
---
Ok(
    (
        [
            Identifier(
                0,
                5,
            ),
            DecimalDigits(
                6,
                7,
            ),
            DecimalDigits(
                8,
                10,
            ),
            Identifier(
                11,
                14,
            ),
        ],
        {},
    ),
)
