tests/src/snapshots/tokenizer__tokenize_strings_with_interpolations.snap
---
source: tests/src/tokenizer.rs
expression: "\"hello $(name)!\" nice \"$(str)\""
---
Ok(
    (
        [
            StringLiteral(
                1,
                7,
            ),
            InterpolationStart(
                8,
                9,
            ),
            Identifier(
                9,
                13,
            ),
            InterpolationEnd(
                13,
                14,
            ),
            StringLiteral(
                14,
                15,
            ),
            Identifier(
                17,
                21,
            ),
            StringLiteral(
                23,
                23,
            ),
            InterpolationStart(
                24,
                25,
            ),
            Identifier(
                25,
                28,
            ),
            InterpolationEnd(
                28,
                29,
            ),
            StringLiteral(
                29,
                29,
            ),
        ],
        {},
    ),
)
